style.css
:root {
  /* Vektor Tools brändivärit */
  --color-background: #FFFFFF;
  --color-primary: #2A160C;
  --color-secondary: #99592A;
  --color-accent: #9A8575;
}

@font-face {
    font-family: Prosto One Regular;
    src:url("public/ProstoOneRegular.ttf");
}

@font-face {
    font-family: Albert Sans Regular;
    src:url("public/AlbertSans-Regular.ttf");
}

* {
  margin: 0px;
  padding: 0px;
  box-sizing: border-box;
}

body {
  font-family: 'Albert Sans Regular', sans-serif;
  font-size: 16px;
  font-weight: 400;
  color: var(--color-primary);
  background-color: var(--color-background);
}
a {
  color: var(--color-secondary);
}
a:hover {
  color: var(--color-primary);
}

/* Headerin tyylit. */
nav {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 1rem 1rem;
}
.logo img {
  width: 50px;
  height: 50px;
}
.items {
  display: flex;
  align-items: center;
  gap: 1.3rem;
}
.items a {
  text-decoration: none;
  color: var(--color-primary);
  font-size: 1rem;
  font-weight: bold;
}
.items a:hover {
  text-decoration: underline;
}
.items .selected {
  text-decoration: underline;
}

@media (min-width: 800px) {
  nav {
    padding: 1rem 3rem;
  }
  .logo img {
    width: 72px;
    height: 72px;
  }
  .items {
    gap: 2rem;
  }
  .items a {
    font-size: 1.5rem;
  }
}

/* Hero-elementin tyylit. */
.hero {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  min-height: 20rem;
}
.hero-background {
  position: absolute;
  object-fit: cover;
  z-index: -1;
  height: 30rem;
  width: 100%;
}
.hero-background img {
  object-fit: cover;
  width: 100%;
  height: 100%;
  /* opacity: 0.2; */
  -webkit-filter: grayscale(100%) opacity(20%);
  filter: grayscale(100%) opacity(20%);
}
.hero-logo {
  max-width: 20rem;
  padding-bottom: 5rem;
}
.hero-heading {
  padding: 1rem;
}
.hero h1 {
  font-family: 'Prosto One Regular';
  text-transform: uppercase;
  font-size: 4rem;
  line-height: 0.8;
}
.hero h2 {
  font-size: 1.5rem;
  margin-bottom: 1rem;
}
.hero a {
  font-size: 1.3rem;
  text-decoration: none;
  color: var(--color-primary);
  cursor: pointer;
  position: relative;
  border: 3px solid;
  padding: 0.25em 0.5em;
  box-shadow: 1px 1px 0px 0px, 2px 2px 0px 0px, 3px 3px 0px 0px, 4px 4px 0px 0px, 5px 5px 0px 0px;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  transition: all ease-in-out .2s;
}
.hero a:hover {
  background-color: var(--color-accent);
}
.hero a:active {
  box-shadow: 0px 0px 0px 0px;
  top: 5px;
  left: 5px;
}
@media (min-width: 800px) {
  .hero {
    min-height: 40rem;
  }
  .hero-heading {
    padding: 1rem 3rem;
  }
  .hero-background {
    height: 50rem;
  }
  .hero h1 {
    font-size: 6rem;
  }
  .hero h2 {
    font-size: 3rem;
    margin-bottom: 3rem;
  }
  .hero a {
    font-size: 2rem;
    padding: 0.25em 0.75em;
  }
}

/* Kuvaus-elementin tyylit */
.bio {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap-reverse;
  display: flex;
  align-items: center;
  min-height: 20rem;
  padding: 2.5rem 1rem 2.5rem 1rem;
  background-color: var(--color-primary);
  color: var(--color-background);
}
.bio video {
  padding-top: 1.5rem;
  width: 20rem;
  max-height: 30rem;
  z-index: 100;
}
.bio h3 {
  padding-bottom: .5rem;
  font-size: 1.5rem;
  line-height: 2;
}
.bio p {
  font-size: 1.2rem;
  line-height: 1.5;
}
@media (min-width: 800px) {
  .bio {
    padding: 4rem 3rem 4rem 3rem;
    flex-wrap: nowrap;
  }
  .bio div {
    padding: 4rem 3rem;
    max-width: 40rem;
  }
  .bio h3 {
    font-size: 2.5rem;
  }
  .bio p {
    font-size: 1.5rem;
    line-height: 1.8;
  }
}
@media (min-width: 1400px) {
  .bio {
    padding: 4rem 3rem 4rem 3rem;
  }
  .bio video {
    width: 30rem;
    max-width: 50vw;
  }
}

/* Yhteydenottopalkin tyylit. */
.quick-contact {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  padding: 3rem 1rem;
}
.quick-contact-img {
  width: 14rem;
  height: 14rem;
  border-radius: 100%;
  overflow: hidden;
}
.quick-contact-img img {
  width: 100%;
}
.quick-contact div {
  max-width: 52rem;
}
@media (min-width: 800px) {
  .quick-contact {
    padding: 5rem 3rem;
  }
}
.quick-contact h3 {
  padding: .5rem;
  font-size: 2.5rem;
}
.quick-contact p {
  font-size: 1.1rem;
  padding: .5rem;
  line-height: 1.4;
}

/* Alapalkin tyylit. */
footer {
  background-color: var(--color-accent);
  color: var(--color-background);
  padding: 3rem 1rem;
  line-height: 1.8;
}
@media (min-width: 800px) {
  footer {
    padding: 3rem;
  }
}

/* Yhteystiedot */
.contact {
  display: flex;
  min-height: 20rem;
  padding: 1rem 1rem;
}
.contact div {
  max-width: 52rem;
}
@media (min-width: 800px) {
  .contact {
    height: 30rem;
    padding: 1rem 3rem;
  }
}
.contact h1 {
  padding: .5rem;
  font-size: 2.5rem;
}
.contact p {
  font-size: 1.1rem;
  padding: .5rem;
  line-height: 1.4;
}

